package dk.hrpclausen.consentcoin.model;

public class Virksomhed extends Bruger {

    String CVR;

    public String getCVR() {
        return CVR;
    }

    public void setCVR(String CVR) {
        this.CVR = CVR;
    }



}
