@startuml

title __MODEL's Class Diagram__\n

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class BlockchainDAO {
          + pushToDatabaseConsent()
          + pushToDatabaseAnmodning()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class Bruger {
          + nummer : int
          + navn : String
          + email : String
          + getNummer()
          + setNummer()
          + getNavn()
          + setNavn()
          + getEmail()
          + setEmail()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      interface DatabaseDAO {
          {abstract} + pushToDatabaseConsent()
          {abstract} + pushToDatabaseAnmodning()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class FirebaseDAO {
          - databaseReference : DatabaseReference
          + pushToDatabaseConsent()
          + pushToDatabaseAnmodning()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class MySQLDAO {
          + pushToDatabaseConsent()
          + pushToDatabaseAnmodning()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class Person {
          ~ cpr : String
          + getCpr()
          + setCpr()
          + Person()
      }
    }
  }
  

  package dk.hrpclausen.consentcoin {
    package dk.hrpclausen.consentcoin.model {
      class Virksomhed {
          ~ CVR : String
          + getCVR()
          + setCVR()
      }
    }
  }
  

  BlockchainDAO -up-|> DatabaseDAO
  FirebaseDAO -up-|> DatabaseDAO
  MySQLDAO -up-|> DatabaseDAO
  Person -up-|> Bruger
  Virksomhed -up-|> Bruger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
